--- a/src/assets/styles/home.module.css
+++ b/src/assets/styles/home.module.css
@@ -191,14 +191,6 @@ body {
   transform: rotateY(180deg);
 }
 
-.program {
-
-}
-
-.program__title {
-  
-}
-
 .programs {
   display: flex;
   flex-direction: column;
@@ -212,6 +204,7 @@ body {
 
 .program__description {
   margin-top: 1.2rem;
+  text-align: left;
 }
 
 .program__link {
