--- a/src/assets/styles/Gallery.module.css
+++ b/src/assets/styles/Gallery.module.css
@@ -1,7 +1,7 @@
 .imageLabel {
     background: rgba(3, 3, 3, 0.75);
     position: relative;
-    bottom: 95px;
+    bottom: 0;
     text-align: center;
     padding: 0.75rem 0;
 }
@@ -27,6 +27,10 @@
     padding: 0;
     cursor: pointer;
     outline: inherit;
+}
+
+.imageContainer {
+    margin-bottom: 4rem;
 }
 
 .rightArrow {
