--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -73,19 +73,20 @@ p {
   text-align: center;
   height: 0;
   overflow: hidden;
-  transition: height 300ms ease;
 }
 
 .show-items {
-  height: 10rem;
+  height: 15rem;
+  margin: 1.2rem 0 0.5rem;
+  transition: height 500ms ease-in-out;
 }
 
 .mobile--nav-item {
-  padding-bottom: 0.8rem;
+  padding-bottom: 1.5rem;
   font-size: 1.3rem;
 }
 
-.mobile--nav-link {
+.nav-link {
   text-decoration: none;
   color: #fff;
 }
@@ -109,7 +110,6 @@ p {
 .button__toggle__bar {
   width: 2rem;
   height: 0.15rem;
-  /* background: #000; */
   background: #fff;
   display: block;
   position: relative;
@@ -158,35 +158,11 @@ footer {
 .footer-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   background-color: #235399;
   margin-bottom: 0;
 }
 
-/* .footer-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.footer-links {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  grid-column: 1/3;
-}
-
-.footer-acknowledge {
-    grid-row: 2/3;
-    grid-column: 1/5;
-}
-
-.footer-contact {
-    grid-column: 3/5;
-}
-
-.footer-links-column {
-  display: flex;
-  flex-direction: column;
-} */
 
 .footer-contact {
   font-size: 0.9rem;
@@ -203,6 +179,7 @@ address {
 
 .footer-acknowledge {
   padding: 1rem 1.2rem;
+  max-width: 45rem;
 }
 
 .footer-brand {
@@ -218,4 +195,16 @@ address {
 .copyright {
     position: absolute;
     bottom: 0.5rem;
+}
+
+@media (min-width: 52rem) {
+  .button__toggle {
+    display: none;
+  }
+
+  .nav__items {
+    display: flex;
+    gap: 2.5rem;
+    margin-right: 3rem;
+  }
 }
