--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -174,6 +174,7 @@ footer {
 .footer-acknowledge,
 address {
   font-size: 0.7rem;
+  line-height: 1.2rem;
   margin-top: 5px;
 }
 
@@ -206,5 +207,14 @@ address {
     display: flex;
     gap: 2.5rem;
     margin-right: 3rem;
+  }
+
+  .footer-container {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .footer-acknowledge {
+    width: 30rem;
   }
 }
